# neural-net-gates

./: LICENSE.md  README.md
consumer_binary/: Cargo.toml
consumer_binary/src/: main.rs
matrix/: Cargo.toml
matrix/src/: lib.rs  macros.rs  matrix.rs
neural-network/: Cargo.toml
neural-network/src/: activations.rs  lib.rs  network.rs
