[package]
name = "neural-network"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = "0.12.0"
matrix = {path = "../matrix"}
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }